tests/integration/errors/test_struct_native_in_regular_fn.sn
# Error test: native struct used in regular function context

native struct Buffer =>
  data: *byte
  length: int

fn main(): void =>
  var buf: Buffer = {}
  print("Should not compile\n")
